# Divido

./: .gitignore  .replit  README.md  pyproject.toml
api/: .env  app.py  requirements.txt  views.py
api/middlewares/: is_admin.py
api/models/: car.py
arduino_files/ESP_Main/: ESP_Main.ino
divido/: package.json
divido/pages/: index.js
divido/styles/: cards.scss
iot/gps_transmitter/: gps_transmitter.ino
iot/static_transmitter/: static_transmitter.ino
local_station_esp32/: local_station_esp32.ino
site/: package-lock.json  package.json
site/components/: CarCard.js
site/pages/: _app.js  index.js
web_page/: package-lock.json
